--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="">About Me</a>
+                    <a href="about.html">About Me</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
